--- a/src/styles/recipeCard.module.css
+++ b/src/styles/recipeCard.module.css
@@ -72,4 +72,5 @@
   background: url('../images/recipeCard.jpg');
   background-size: cover;
   box-shadow: 0px 0px 10px #060606;
+  text-align: center;
 }
