--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100vw;
   color: white;
   text-transform: uppercase;
   font-family: sans-serif;
