--- a/src/styles/recipe.module.css
+++ b/src/styles/recipe.module.css
@@ -92,7 +92,7 @@
 
 
 .recipeUrlContainer {
-  width: 300px;
+  max-width: 300px;
   font-size: 20px;
   margin-top: 20px;
   text-align: center;
@@ -103,4 +103,26 @@
   display: block;
   font-size: 18px;
   color: rgb(215, 59, 24);
+  text-decoration: none;
+  position: relative;
+
+}
+.recipeUrl::after{
+  content: '';
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 2px;
+  background-color: currentColor;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: 1s transform;
+}
+.recipeUrl:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+.recipeUrl:hover {
+  color: rgb(255, 0, 0);
 }
