--- a/src/styles/recipe.module.scss
+++ b/src/styles/recipe.module.scss
@@ -45,27 +45,20 @@
   border-radius: 10px;
 }
 
-.recipeContainer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-  overflow: hidden;
-}
-
 .recipeTitle {
   text-align: center;
   width: 350px;
   margin-top: 30px;
-font-weight: 400;
+  font-weight: 400;
   text-transform: uppercase;
+  color: white;
 }
 
 .recipePublisher {
   text-align: center;
   margin-top: 10px;
   font-size: 20px;
-  color: rgb(99, 98, 98)
+  color: white;
 }
 
 
@@ -74,7 +67,7 @@ font-weight: 400;
   font-size: 20px;
   margin-top: 20px;
   text-align: center;
-  color: rgb(57, 57, 57);
+  color: white;;
 }
 
 .recipeUrl {
@@ -105,20 +98,37 @@ font-weight: 400;
   color: rgb(255, 0, 0);
 }
 
+.recipeContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  overflow: hidden;
+  height: calc(100vh - 140px);
+}
+
 .flexContainerLeft {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 45%;
-  margin: 0 20px;
+  width: 40%;
+  margin-right: 20px;
+  height: 100%;
+  background: linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url('../images/recipebg.jpg');
+  background-size: cover;
+  border-top: 3px solid rgb(255, 161, 161);
+  overflow: scroll;
 }
 
 .flexContainerRight {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 55%;
-  margin: 0 20px;
+  width: 60%;
+  margin-left: 20px;
+  height: 100%;
+  overflow: scroll;
 }
 
 .ingredient {
@@ -158,11 +168,23 @@ font-weight: 400;
   .ingredient {
     width: auto;
   }
+  .recipeContainer {
+    height: auto;
+  }
+  .recipeTitle,.recipePublisher,.recipeUrlContainer {
+    color: black;
+  }
   .flexContainerLeft {
     width: 90%;
+    height: auto;
+    background: none;
+    border: none;
+    margin-left: 20px;
   }
   .flexContainerRight{
     width: 90%;
+    height: auto;
+    margin-right: 20px;
   }
   .recipeContainer {
     flex-direction: column;
