--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,5 +1,5 @@
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .header{ 
     /* text-align: center; */
     justify-content: center;
