logo animation bug fix where the animation would stop on breakpoints

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -10,9 +10,7 @@
   }
   .logoContainer {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
   }
 }
 .header {
@@ -41,7 +39,11 @@
   font-size: 15px;
   text-transform: none;
 }
-
+.logoContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .logo {
   width: 120px;
   height: 120px;
