--- a/src/styles/recipe.module.scss
+++ b/src/styles/recipe.module.scss
@@ -24,12 +24,13 @@
   height: 100%;
   border-radius: 5px;
   z-index: -1;
-  background-color: rgba(117, 117, 117, 0.1);
-  transform: scaleX(0) scaleY(0);
+  background-color: rgba(117, 117, 117, 0.07);
+  transform: scaleY(0);
+  transform-origin: top;
   transition: .5s transform;
 }
 .backButton:hover::before {
-  transform: scaleX(1) scaleY(1);
+  transform: scaleY(1);
 }
 
 .backLink{
@@ -60,6 +61,14 @@
   color: white;
 }
 
+.recipeDirectionsContainer {
+  margin-top: 25px;
+  margin-bottom: 5px;
+  font-size: 23px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 600;
+  text-align: center;
+}
 
 .recipeUrlContainer {
   max-width: 300px;
@@ -192,6 +201,10 @@
   .ingredientsHeader {
     margin-top: 40px;
     margin-bottom: 10px;
+  }
+  .recipeDirectionsContainer {
+    max-width: 300px;
+    overflow: hidden;
   }
   .recipeContainer {
     height: auto;
