--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -31,13 +31,25 @@
   font-weight: lighter;
   letter-spacing: 1px;
   height: 140px;
-  box-shadow: 4px 4px 25px rgb(9, 9, 9);
   padding: 0 50px;
+  box-shadow: 4px 4px 35px rgb(9, 9, 9);
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7) ), url('../images/header.jpg');
   background-size: cover;
   text-shadow: 1px 1px 5px rgb(133, 133, 133);
-  border-bottom: 3px solid rgb(255, 161, 161);
   z-index: 999;
+}
+.scrollContainer {
+  position: fixed;
+  top: 140px;
+  left: 0px;
+  width: 100%;
+  height: 5px;
+  z-index: 1000;
+}
+.scroll {
+  height: 5px;
+  background-color:  #FF4C4C;
+  width: 0%;
 }
 
 .title {
