--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,3 +22,17 @@ body{
   padding: 0px 30px;
   padding-top: 70px;
 }
+
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1600px) {
+  html {
+    font-size: 14px;
+  }
+}
+
