--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -13,9 +13,11 @@
 
   }
 }
+
+
 .outerContainer {
   width: 100vw;
-  height: 140px;
+  height: 8.75rem;
 }
 .header {
   display: flex;
@@ -30,8 +32,8 @@
   font-family: sans-serif;
   font-weight: lighter;
   letter-spacing: 1px;
-  height: 140px;
-  padding: 0 50px;
+  height: 8.75rem;
+  padding: 0 3.125rem;
   box-shadow: 4px 4px 35px rgb(9, 9, 9);
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7) ), url('../images/header.jpg');
   background-size: cover;
@@ -40,7 +42,7 @@
 }
 .scrollContainer {
   position: fixed;
-  top: 140px;
+  top: 8.75rem;
   left: 0px;
   width: 100%;
   height: 5px;
@@ -53,12 +55,13 @@
 }
 
 .title {
+  font-size: 2rem;
   font-weight: lighter;
 }
 .author {
   display: block;
   color: rgb(210, 210, 210);
-  font-size: 15px;
+  font-size: 1rem;
   text-transform: none;
 }
 .logoContainer{
@@ -67,8 +70,8 @@
   align-items: center;
 }
 .logo {
-  width: 120px;
-  height: 120px;
+  width: 7.5rem;
+  height: 7.5rem;
   float: right;
   animation: logoAnimation 30s infinite;
   animation-timing-function: linear;
