--- a/src/styles/recipe.module.scss
+++ b/src/styles/recipe.module.scss
@@ -5,9 +5,9 @@
 
 .backButton {
   position: relative;
-  padding: 15px;
+  padding: 0.9375rem;
   width: 50%;
-  margin: 20px auto;
+  margin: 1.25rem auto;
   border: 1px solid rgb(215, 59, 24);
   border-radius: 5px;
   text-align: center;
@@ -33,20 +33,20 @@
 
 .backLink{
   color: rgb(215, 59, 24);
-  font-size: 20px;
+  font-size: 1.25rem;
   text-decoration: none;
 }
 
 .recipeImage {
-  width: 350px;
-  margin-top: 30px;
-  border-radius: 10px;
+  width: 21.875rem;
+  margin-top: 1.875rem;
+  border-radius: 0.625rem;
 }
 
 .recipeTitle {
   text-align: center;
-  width: 350px;
-  margin-top: 30px;
+  width: 21.875rem;
+  margin-top: 1.875rem;
   font-weight: 400;
   text-transform: uppercase;
   color: white;
@@ -54,31 +54,31 @@
 
 .recipePublisher {
   text-align: center;
-  margin-top: 10px;
-  font-size: 20px;
+  margin-top: 0.625rem;
+  font-size: 1.25rem;
   color: white;
 }
 
 .recipeDirectionsContainer {
-  margin-top: 25px;
-  margin-bottom: 5px;
-  font-size: 23px;
+  margin-top: 1.5625rem;
+  margin-bottom: 0.3125rem;
+  font-size: 1.4375rem;
   font-family: 'Times New Roman', Times, serif;
   font-weight: 600;
   text-align: center;
 }
 
 .recipeUrlContainer {
-  max-width: 300px;
-  font-size: 20px;
-  margin-top: 20px;
+  max-width: 18.75rem;
+  font-size: 1.25rem;
+  margin-top: 1.25rem;
   text-align: center;
   color: white;;
 }
 
 .recipeUrl {
   display: block;
-  font-size: 18px;
+  font-size: 1.125rem;
   color: rgb(215, 59, 24);
   text-decoration: none;
   position: relative;
@@ -110,7 +110,7 @@
   align-items: center;
   flex-direction: row;
   overflow: hidden;
-  height: calc(100vh - 140px);
+  height: calc(100vh - 8.75rem);
 }
 
 .flexContainerLeft {
@@ -119,7 +119,7 @@
   align-items: center;
   flex-direction: column;
   width: 40%;
-  margin-right: 20px;
+  margin-right: 1.25rem;
   height: 100%;
   background: linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url('../images/recipebg.jpg');
   background-size: cover;
@@ -132,23 +132,23 @@
   align-items: center;
   flex-direction: column;
   width: 60%;
-  margin-left: 20px;
+  margin-left: 1.25rem;
   height: 100%;
   overflow: auto;
 }
 
 .ingredient {
-  font-size: 20px;
-  max-width: 600px;
-  margin: 20px;
+  font-size: 1.25rem;
+  max-width: 37.5rem;
+  margin: 1.25rem;
   text-align: center;
   color: rgb(46, 46, 46);
 }
 
 .ingredientsHeader {
-  font-size: 30px;
-  margin-top: 60px; 
-  margin-bottom: 40px;
+  font-size: 1.875rem;
+  margin-top: 3.75rem; 
+  margin-bottom: 2.5rem;
   font-weight: 600;
   text-transform: uppercase;
   position: relative;
@@ -174,34 +174,34 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .backButton {
     position: relative;
     top: 0;
     left: 0;
     width: 100%;
     border: 1px solid rgb(215, 59, 24);
-    border-radius: 10px;
+    border-radius: 0.625rem;
   }
   .backButton::before {
-    border-radius: 10px;
+    border-radius: 0.625rem;
   }
   .backLink {
-    font-size: 15px;
+    font-size: 0.9375rem;
   }
   .recipeImage {
-    width: 350px;
+    width: 21.875rem;
     height: auto;
   }
   .ingredient {
     width: auto;
   }
   .ingredientsHeader {
-    margin-top: 40px;
-    margin-bottom: 10px;
+    margin-top: 2.5rem;
+    margin-bottom: 0.625rem;
   }
   .recipeDirectionsContainer {
-    max-width: 300px;
+    max-width: 18.75rem;
     overflow: hidden;
   }
   .recipeContainer {
@@ -218,12 +218,12 @@
     height: auto;
     background: none;
     border: none;
-    margin-left: 20px;
+    margin-left: 1.25rem;
   }
   .flexContainerRight{
     width: 90%;
     height: auto;
-    margin-right: 20px;
+    margin-right: 1.25rem;
   }
   .recipeContainer {
     flex-direction: column;
