--- a/src/styles/recipeCard.module.css
+++ b/src/styles/recipeCard.module.css
@@ -1,22 +1,22 @@
 .recipeImage {
-  width: 300px;
-  height: 300px;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  width: 18.75rem;
+  height: 18.75rem;
+  border-top-left-radius: 0.9375rem;
+  border-top-right-radius: 0.9375rem;
   object-fit: cover;
 }
 .recipeTitle {
-  width: 300px;
-  margin-top: 15px;
-  padding-left: 10px;
+  width: 18.75rem;
+  margin-top: 0.9375rem;
+  padding-left: 0.625rem;
   color: rgb(205, 205, 205);
   transition: .4s color;
 }
 .recipePublisher {
-  width: 300px;
-  margin-top: 15px;
-  padding-left: 10px;
-  padding-bottom: 15px;
+  width: 18.75rem;
+  margin-top: 0.9375rem;
+  padding-left: 0.625rem;
+  padding-bottom: 0.9375rem;
   color: rgb(162, 162, 162);
 }
 
@@ -40,8 +40,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
   color: rgba(255, 255, 255, 0.893);
   text-decoration: none;
   transition: .4s color;
@@ -79,13 +79,13 @@
   transform-origin: left;
 }
 .recipeContainer {
-  margin-right: 20px;
-  margin-left: 20px;
-  margin-bottom: 110px;
-  padding-bottom: 15px;
-  border-radius: 15px;
+  margin-right: 1.25rem;
+  margin-left: 1.25rem;
+  margin-bottom: 7.625rem;
+  padding-bottom: 0.9375rem;
+  border-radius: 0.9375rem;
   background: url('../images/recipeCard.jpg');
   background-size: cover;
-  box-shadow: 0px 0px 10px #060606;
+  box-shadow: 0px 0px 0.625rem #060606;
   text-align: center;
 }
