Added animation to recipes' appearing

--- a/src/styles/recipe.module.scss
+++ b/src/styles/recipe.module.scss
@@ -126,6 +126,7 @@
   background-size: cover;
   border-right: 2px solid black;
   overflow: auto;
+  border-top: 5px solid rgb(255, 0, 0);
 }
 
 .flexContainerRight {
