--- a/src/styles/recipeCard.module.css
+++ b/src/styles/recipeCard.module.css
@@ -88,4 +88,16 @@
   background-size: cover;
   box-shadow: 0px 0px 0.625rem #060606;
   text-align: center;
+  animation: slide-up 0.4s ease;
+}
+
+@keyframes slide-up {
+  0% {
+      opacity: 0;
+      transform: translateY(100px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
 }
